# ce_5073-3.1-tasca-avaluable

./: README.md  pyproject.toml
ce_5073_3_1_tasca_avaluable/: predict_app.py  predict_service.py
models/: 0-standard-scaler-model.pck  1-logistic-regression-model.pck  2-support-vector-machine-model.pck  3-decision-tree-model.pck  4-k-nearest-neighbours-model.pck
notebooks/: 0_prepare_modeling_data.ipynb  1_logistic_regression_client.ipynb  1_logistic_regression_modeling.ipynb  2_support_vector_machine_client.ipynb  2_support_vector_machine_modeling.ipynb  3_decision_tree_client.ipynb  3_decision_tree_modeling.ipynb  4_k_nearest_neighbours_client.ipynb  4_k_nearest_neighbours_modeling.ipynb
